--- a/AI/AStar/AStar.vcxproj.filters
+++ b/AI/AStar/AStar.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="source\PathFinder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\InputManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\VectorMaths.h">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="source\PathFinder.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\InputManager.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
