redoing all path stuff

--- a/AI/AStar/AStar.vcxproj
+++ b/AI/AStar/AStar.vcxproj
@@ -102,8 +102,10 @@
     <ClCompile Include="source\Path.cpp" />
     <ClCompile Include="source\PathFinder.cpp" />
     <ClCompile Include="source\PathNode.cpp" />
+    <ClCompile Include="source\PathNode2.cpp" />
     <ClCompile Include="source\Renderer.cpp" />
     <ClCompile Include="source\UI.cpp" />
+    <ClCompile Include="source\UI2.cpp" />
     <ClCompile Include="source\VectorMaths.cpp" />
     <ClCompile Include="source\WinMain.cpp" />
   </ItemGroup>
@@ -113,8 +115,10 @@
     <ClInclude Include="source\Path.h" />
     <ClInclude Include="source\PathFinder.h" />
     <ClInclude Include="source\PathNode.h" />
+    <ClInclude Include="source\PathNode2.h" />
     <ClInclude Include="source\Renderer.h" />
     <ClInclude Include="source\UI.h" />
+    <ClInclude Include="source\UI2.h" />
     <ClInclude Include="source\VectorMaths.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
