--- a/AI/AStar/AStar.vcxproj.filters
+++ b/AI/AStar/AStar.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="source\Path2.cpp">
       <Filter>Source Files\Path</Filter>
     </ClCompile>
+    <ClCompile Include="source\Edge2.cpp">
+      <Filter>Source Files\Path</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\VectorMaths.h">
@@ -90,6 +93,9 @@
       <Filter>Source Files\Path</Filter>
     </ClInclude>
     <ClInclude Include="source\Path2.h">
+      <Filter>Source Files\Path</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Edge2.h">
       <Filter>Source Files\Path</Filter>
     </ClInclude>
   </ItemGroup>
